qt/gen_qtreewidget.h

typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QTreeWidget QTreeWidget;
typedef struct QTreeWidgetItem QTreeWidgetItem;
typedef struct QWidget QWidget;
QTreeWidgetItem* QTreeWidget_topLevelItem(const QTreeWidget* self, int index);
int QTreeWidget_topLevelItemCount(const QTreeWidget* self);
void QTreeWidget_insertTopLevelItem(QTreeWidget* self, int index, QTreeWidgetItem* item);
void QTreeWidget_addTopLevelItem(QTreeWidget* self, QTreeWidgetItem* item);
QTreeWidgetItem* QTreeWidget_takeTopLevelItem(QTreeWidget* self, int index);
int QTreeWidget_indexOfTopLevelItem(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_insertTopLevelItems(QTreeWidget* self, int index, struct miqt_array /* of QTreeWidgetItem* */  items);
void QTreeWidget_addTopLevelItems(QTreeWidget* self, struct miqt_array /* of QTreeWidgetItem* */  items);
QTreeWidgetItem* QTreeWidget_headerItem(const QTreeWidget* self);
void QTreeWidget_setHeaderItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setHeaderLabels(QTreeWidget* self, struct miqt_array /* of struct miqt_string */  labels);
void QTreeWidget_setHeaderLabel(QTreeWidget* self, struct miqt_string label);
QTreeWidgetItem* QTreeWidget_currentItem(const QTreeWidget* self);
int QTreeWidget_currentColumn(const QTreeWidget* self);
void QTreeWidget_setCurrentItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setCurrentItem2(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_setCurrentItem3(QTreeWidget* self, QTreeWidgetItem* item, int column, int command);
QTreeWidgetItem* QTreeWidget_itemAt(const QTreeWidget* self, QPoint* p);
QTreeWidgetItem* QTreeWidget_itemAt2(const QTreeWidget* self, int x, int y);
QRect* QTreeWidget_visualItemRect(const QTreeWidget* self, QTreeWidgetItem* item);
int QTreeWidget_sortColumn(const QTreeWidget* self);
void QTreeWidget_sortItems(QTreeWidget* self, int column, int order);
void QTreeWidget_editItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_openPersistentEditor(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_closePersistentEditor(QTreeWidget* self, QTreeWidgetItem* item);
bool QTreeWidget_isPersistentEditorOpen(const QTreeWidget* self, QTreeWidgetItem* item);
QWidget* QTreeWidget_itemWidget(const QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_setItemWidget(QTreeWidget* self, QTreeWidgetItem* item, int column, QWidget* widget);
void QTreeWidget_removeItemWidget(QTreeWidget* self, QTreeWidgetItem* item, int column);
bool QTreeWidget_isItemSelected(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setItemSelected(QTreeWidget* self, QTreeWidgetItem* item, bool select);
struct miqt_array /* of QTreeWidgetItem* */  QTreeWidget_selectedItems(const QTreeWidget* self);
struct miqt_array /* of QTreeWidgetItem* */  QTreeWidget_findItems(const QTreeWidget* self, struct miqt_string text, int flags);
bool QTreeWidget_isItemHidden(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setItemHidden(QTreeWidget* self, QTreeWidgetItem* item, bool hide);
bool QTreeWidget_isItemExpanded(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setItemExpanded(QTreeWidget* self, QTreeWidgetItem* item, bool expand);
bool QTreeWidget_isFirstItemColumnSpanned(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setFirstItemColumnSpanned(QTreeWidget* self, QTreeWidgetItem* item, bool span);
QTreeWidgetItem* QTreeWidget_itemAbove(const QTreeWidget* self, QTreeWidgetItem* item);
QTreeWidgetItem* QTreeWidget_itemBelow(const QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_setSelectionModel(QTreeWidget* self, QItemSelectionModel* selectionModel);
void QTreeWidget_scrollToItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_expandItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_collapseItem(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_clear(QTreeWidget* self);
void QTreeWidget_itemPressed(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemPressed(QTreeWidget* self, intptr_t slot);
void QTreeWidget_itemClicked(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemClicked(QTreeWidget* self, intptr_t slot);
void QTreeWidget_itemDoubleClicked(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemDoubleClicked(QTreeWidget* self, intptr_t slot);
void QTreeWidget_itemActivated(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemActivated(QTreeWidget* self, intptr_t slot);
void QTreeWidget_itemEntered(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemEntered(QTreeWidget* self, intptr_t slot);
void QTreeWidget_itemChanged(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_connect_itemChanged(QTreeWidget* self, intptr_t slot);
void QTreeWidget_itemExpanded(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_connect_itemExpanded(QTreeWidget* self, intptr_t slot);
void QTreeWidget_itemCollapsed(QTreeWidget* self, QTreeWidgetItem* item);
void QTreeWidget_connect_itemCollapsed(QTreeWidget* self, intptr_t slot);
void QTreeWidget_currentItemChanged(QTreeWidget* self, QTreeWidgetItem* current, QTreeWidgetItem* previous);
void QTreeWidget_connect_currentItemChanged(QTreeWidget* self, intptr_t slot);
void QTreeWidget_itemSelectionChanged(QTreeWidget* self);
void QTreeWidget_connect_itemSelectionChanged(QTreeWidget* self, intptr_t slot);
struct miqt_string QTreeWidget_tr2(const char* s, const char* c);
struct miqt_string QTreeWidget_tr3(const char* s, const char* c, int n);
struct miqt_string QTreeWidget_trUtf82(const char* s, const char* c);
struct miqt_string QTreeWidget_trUtf83(const char* s, const char* c, int n);
void QTreeWidget_editItem2(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_openPersistentEditor2(QTreeWidget* self, QTreeWidgetItem* item, int column);
void QTreeWidget_closePersistentEditor2(QTreeWidget* self, QTreeWidgetItem* item, int column);
bool QTreeWidget_isPersistentEditorOpen2(const QTreeWidget* self, QTreeWidgetItem* item, int column);
struct miqt_array /* of QTreeWidgetItem* */  QTreeWidget_findItems3(const QTreeWidget* self, struct miqt_string text, int flags, int column);
void QTreeWidget_scrollToItem2(QTreeWidget* self, QTreeWidgetItem* item, int hint);
bool QTreeWidget_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTreeWidget_virtualbase_metaObject(const void* self);
bool QTreeWidget_override_virtual_metacast(void* self, intptr_t slot);
void* QTreeWidget_virtualbase_metacast(void* self, const char* param1);
bool QTreeWidget_override_virtual_metacall(void* self, intptr_t slot);
int QTreeWidget_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTreeWidget_override_virtual_setSelectionModel(void* self, intptr_t slot);
void QTreeWidget_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
bool QTreeWidget_override_virtual_event(void* self, intptr_t slot);
bool QTreeWidget_virtualbase_event(void* self, QEvent* e);
bool QTreeWidget_override_virtual_mimeTypes(void* self, intptr_t slot);
struct miqt_array /* of struct miqt_string */  QTreeWidget_virtualbase_mimeTypes(const void* self);
bool QTreeWidget_override_virtual_mimeData(void* self, intptr_t slot);
QMimeData* QTreeWidget_virtualbase_mimeData(const void* self, struct miqt_array /* of QTreeWidgetItem* */  items);
bool QTreeWidget_override_virtual_dropMimeData(void* self, intptr_t slot);
bool QTreeWidget_virtualbase_dropMimeData(void* self, QTreeWidgetItem* parent, int index, QMimeData* data, int action);
bool QTreeWidget_override_virtual_supportedDropActions(void* self, intptr_t slot);
int QTreeWidget_virtualbase_supportedDropActions(const void* self);
bool QTreeWidget_override_virtual_dropEvent(void* self, intptr_t slot);
void QTreeWidget_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QTreeWidget_override_virtual_setRootIndex(void* self, intptr_t slot);
void QTreeWidget_virtualbase_setRootIndex(void* self, QModelIndex* index);