qt/gen_qtreewidget.nim

proc fcQTreeWidget_topLevelItem(self: pointer, index: cint): pointer {.importc: "QTreeWidget_topLevelItem".}
proc fcQTreeWidget_topLevelItemCount(self: pointer, ): cint {.importc: "QTreeWidget_topLevelItemCount".}
proc fcQTreeWidget_insertTopLevelItem(self: pointer, index: cint, item: pointer): void {.importc: "QTreeWidget_insertTopLevelItem".}
proc fcQTreeWidget_addTopLevelItem(self: pointer, item: pointer): void {.importc: "QTreeWidget_addTopLevelItem".}
proc fcQTreeWidget_takeTopLevelItem(self: pointer, index: cint): pointer {.importc: "QTreeWidget_takeTopLevelItem".}
proc fcQTreeWidget_indexOfTopLevelItem(self: pointer, item: pointer): cint {.importc: "QTreeWidget_indexOfTopLevelItem".}
proc fcQTreeWidget_insertTopLevelItems(self: pointer, index: cint, items: struct_miqt_array): void {.importc: "QTreeWidget_insertTopLevelItems".}
proc fcQTreeWidget_addTopLevelItems(self: pointer, items: struct_miqt_array): void {.importc: "QTreeWidget_addTopLevelItems".}
proc fcQTreeWidget_headerItem(self: pointer, ): pointer {.importc: "QTreeWidget_headerItem".}
proc fcQTreeWidget_setHeaderItem(self: pointer, item: pointer): void {.importc: "QTreeWidget_setHeaderItem".}
proc fcQTreeWidget_setHeaderLabels(self: pointer, labels: struct_miqt_array): void {.importc: "QTreeWidget_setHeaderLabels".}
proc fcQTreeWidget_setHeaderLabel(self: pointer, label: struct_miqt_string): void {.importc: "QTreeWidget_setHeaderLabel".}
proc fcQTreeWidget_currentItem(self: pointer, ): pointer {.importc: "QTreeWidget_currentItem".}
proc fcQTreeWidget_currentColumn(self: pointer, ): cint {.importc: "QTreeWidget_currentColumn".}
proc fcQTreeWidget_setCurrentItem(self: pointer, item: pointer): void {.importc: "QTreeWidget_setCurrentItem".}
proc fcQTreeWidget_setCurrentItem2(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_setCurrentItem2".}
proc fcQTreeWidget_setCurrentItem3(self: pointer, item: pointer, column: cint, command: cint): void {.importc: "QTreeWidget_setCurrentItem3".}
proc fcQTreeWidget_itemAt(self: pointer, p: pointer): pointer {.importc: "QTreeWidget_itemAt".}
proc fcQTreeWidget_itemAt2(self: pointer, x: cint, y: cint): pointer {.importc: "QTreeWidget_itemAt2".}
proc fcQTreeWidget_visualItemRect(self: pointer, item: pointer): pointer {.importc: "QTreeWidget_visualItemRect".}
proc fcQTreeWidget_sortColumn(self: pointer, ): cint {.importc: "QTreeWidget_sortColumn".}
proc fcQTreeWidget_sortItems(self: pointer, column: cint, order: cint): void {.importc: "QTreeWidget_sortItems".}
proc fcQTreeWidget_editItem(self: pointer, item: pointer): void {.importc: "QTreeWidget_editItem".}
proc fcQTreeWidget_openPersistentEditor(self: pointer, item: pointer): void {.importc: "QTreeWidget_openPersistentEditor".}
proc fcQTreeWidget_closePersistentEditor(self: pointer, item: pointer): void {.importc: "QTreeWidget_closePersistentEditor".}
proc fcQTreeWidget_isPersistentEditorOpen(self: pointer, item: pointer): bool {.importc: "QTreeWidget_isPersistentEditorOpen".}
proc fcQTreeWidget_itemWidget(self: pointer, item: pointer, column: cint): pointer {.importc: "QTreeWidget_itemWidget".}
proc fcQTreeWidget_setItemWidget(self: pointer, item: pointer, column: cint, widget: pointer): void {.importc: "QTreeWidget_setItemWidget".}
proc fcQTreeWidget_removeItemWidget(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_removeItemWidget".}
proc fcQTreeWidget_isItemSelected(self: pointer, item: pointer): bool {.importc: "QTreeWidget_isItemSelected".}
proc fcQTreeWidget_setItemSelected(self: pointer, item: pointer, select: bool): void {.importc: "QTreeWidget_setItemSelected".}
proc fcQTreeWidget_selectedItems(self: pointer, ): struct_miqt_array {.importc: "QTreeWidget_selectedItems".}
proc fcQTreeWidget_findItems(self: pointer, text: struct_miqt_string, flags: cint): struct_miqt_array {.importc: "QTreeWidget_findItems".}
proc fcQTreeWidget_isItemHidden(self: pointer, item: pointer): bool {.importc: "QTreeWidget_isItemHidden".}
proc fcQTreeWidget_setItemHidden(self: pointer, item: pointer, hide: bool): void {.importc: "QTreeWidget_setItemHidden".}
proc fcQTreeWidget_isItemExpanded(self: pointer, item: pointer): bool {.importc: "QTreeWidget_isItemExpanded".}
proc fcQTreeWidget_setItemExpanded(self: pointer, item: pointer, expand: bool): void {.importc: "QTreeWidget_setItemExpanded".}
proc fcQTreeWidget_isFirstItemColumnSpanned(self: pointer, item: pointer): bool {.importc: "QTreeWidget_isFirstItemColumnSpanned".}
proc fcQTreeWidget_setFirstItemColumnSpanned(self: pointer, item: pointer, span: bool): void {.importc: "QTreeWidget_setFirstItemColumnSpanned".}
proc fcQTreeWidget_itemAbove(self: pointer, item: pointer): pointer {.importc: "QTreeWidget_itemAbove".}
proc fcQTreeWidget_itemBelow(self: pointer, item: pointer): pointer {.importc: "QTreeWidget_itemBelow".}
proc fcQTreeWidget_setSelectionModel(self: pointer, selectionModel: pointer): void {.importc: "QTreeWidget_setSelectionModel".}
proc fcQTreeWidget_scrollToItem(self: pointer, item: pointer): void {.importc: "QTreeWidget_scrollToItem".}
proc fcQTreeWidget_expandItem(self: pointer, item: pointer): void {.importc: "QTreeWidget_expandItem".}
proc fcQTreeWidget_collapseItem(self: pointer, item: pointer): void {.importc: "QTreeWidget_collapseItem".}
proc fcQTreeWidget_clear(self: pointer, ): void {.importc: "QTreeWidget_clear".}
proc fcQTreeWidget_itemPressed(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_itemPressed".}
proc fQTreeWidget_connect_itemPressed(self: pointer, slot: int) {.importc: "QTreeWidget_connect_itemPressed".}
proc fcQTreeWidget_itemClicked(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_itemClicked".}
proc fQTreeWidget_connect_itemClicked(self: pointer, slot: int) {.importc: "QTreeWidget_connect_itemClicked".}
proc fcQTreeWidget_itemDoubleClicked(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_itemDoubleClicked".}
proc fQTreeWidget_connect_itemDoubleClicked(self: pointer, slot: int) {.importc: "QTreeWidget_connect_itemDoubleClicked".}
proc fcQTreeWidget_itemActivated(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_itemActivated".}
proc fQTreeWidget_connect_itemActivated(self: pointer, slot: int) {.importc: "QTreeWidget_connect_itemActivated".}
proc fcQTreeWidget_itemEntered(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_itemEntered".}
proc fQTreeWidget_connect_itemEntered(self: pointer, slot: int) {.importc: "QTreeWidget_connect_itemEntered".}
proc fcQTreeWidget_itemChanged(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_itemChanged".}
proc fQTreeWidget_connect_itemChanged(self: pointer, slot: int) {.importc: "QTreeWidget_connect_itemChanged".}
proc fcQTreeWidget_itemExpanded(self: pointer, item: pointer): void {.importc: "QTreeWidget_itemExpanded".}
proc fQTreeWidget_connect_itemExpanded(self: pointer, slot: int) {.importc: "QTreeWidget_connect_itemExpanded".}
proc fcQTreeWidget_itemCollapsed(self: pointer, item: pointer): void {.importc: "QTreeWidget_itemCollapsed".}
proc fQTreeWidget_connect_itemCollapsed(self: pointer, slot: int) {.importc: "QTreeWidget_connect_itemCollapsed".}
proc fcQTreeWidget_currentItemChanged(self: pointer, current: pointer, previous: pointer): void {.importc: "QTreeWidget_currentItemChanged".}
proc fQTreeWidget_connect_currentItemChanged(self: pointer, slot: int) {.importc: "QTreeWidget_connect_currentItemChanged".}
proc fcQTreeWidget_itemSelectionChanged(self: pointer, ): void {.importc: "QTreeWidget_itemSelectionChanged".}
proc fQTreeWidget_connect_itemSelectionChanged(self: pointer, slot: int) {.importc: "QTreeWidget_connect_itemSelectionChanged".}
proc fcQTreeWidget_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTreeWidget_tr2".}
proc fcQTreeWidget_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTreeWidget_tr3".}
proc fcQTreeWidget_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTreeWidget_trUtf82".}
proc fcQTreeWidget_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTreeWidget_trUtf83".}
proc fcQTreeWidget_editItem2(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_editItem2".}
proc fcQTreeWidget_openPersistentEditor2(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_openPersistentEditor2".}
proc fcQTreeWidget_closePersistentEditor2(self: pointer, item: pointer, column: cint): void {.importc: "QTreeWidget_closePersistentEditor2".}
proc fcQTreeWidget_isPersistentEditorOpen2(self: pointer, item: pointer, column: cint): bool {.importc: "QTreeWidget_isPersistentEditorOpen2".}
proc fcQTreeWidget_findItems3(self: pointer, text: struct_miqt_string, flags: cint, column: cint): struct_miqt_array {.importc: "QTreeWidget_findItems3".}
proc fcQTreeWidget_scrollToItem2(self: pointer, item: pointer, hint: cint): void {.importc: "QTreeWidget_scrollToItem2".}
proc fQTreeWidget_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QTreeWidget_virtualbase_metaObject".}
proc fcQTreeWidget_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_metaObject".}
proc fQTreeWidget_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QTreeWidget_virtualbase_metacast".}
proc fcQTreeWidget_override_virtual_metacast(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_metacast".}
proc fQTreeWidget_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTreeWidget_virtualbase_metacall".}
proc fcQTreeWidget_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_metacall".}
proc fQTreeWidget_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QTreeWidget_virtualbase_setSelectionModel".}
proc fcQTreeWidget_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_setSelectionModel".}
proc fQTreeWidget_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QTreeWidget_virtualbase_event".}
proc fcQTreeWidget_override_virtual_event(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_event".}
proc fQTreeWidget_virtualbase_mimeTypes(self: pointer, ): struct_miqt_array{.importc: "QTreeWidget_virtualbase_mimeTypes".}
proc fcQTreeWidget_override_virtual_mimeTypes(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_mimeTypes".}
proc fQTreeWidget_virtualbase_mimeData(self: pointer, items: struct_miqt_array): pointer{.importc: "QTreeWidget_virtualbase_mimeData".}
proc fcQTreeWidget_override_virtual_mimeData(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_mimeData".}
proc fQTreeWidget_virtualbase_dropMimeData(self: pointer, parent: pointer, index: cint, data: pointer, action: cint): bool{.importc: "QTreeWidget_virtualbase_dropMimeData".}
proc fcQTreeWidget_override_virtual_dropMimeData(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_dropMimeData".}
proc fQTreeWidget_virtualbase_supportedDropActions(self: pointer, ): cint{.importc: "QTreeWidget_virtualbase_supportedDropActions".}
proc fcQTreeWidget_override_virtual_supportedDropActions(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_supportedDropActions".}
proc fQTreeWidget_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_dropEvent".}
proc fcQTreeWidget_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_dropEvent".}
proc fQTreeWidget_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QTreeWidget_virtualbase_setRootIndex".}
proc fcQTreeWidget_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_setRootIndex".}
